--- a/index.tex
+++ b/index.tex
@@ -824,34 +824,29 @@ requirements. Issues that need to be solved by these services:
   dataframe API, all of the above?
 \end{itemize}
 
-\subsection{Open technologies: available digital public
-goods}\label{open-technologies-available-digital-public-goods}
+\subsection{Open technologies: deploying Instant OpenHIE with digital
+public
+goods}\label{open-technologies-deploying-instant-openhie-with-digital-public-goods}
 
-Many components of the OpenHIE specification are now available as a
-digital public goods. Table~\ref{tbl-digital-public-goods} lists
-components that are currently available for implementing the OpenHIE
-framework using open source, digital public goods that are compliant
-with the FHIR standard, illustrating the maturity of this ecosystem and
-development community. With the launch of the Instant OpenHIE
-configuration toolkit\citep{InstantOpenHIEv2}, it has become easier to
-set up, explore and develop HIEs thereby reducing costs and skills
-required for software developers to deploy an OpenHIE architecture for
-quicker solution testing and as a starting point for faster production
-implementation and customisation. Several frameworks are available that
-offer a set of preconfigured components out of the box, such as for
-example:
-
-\begin{itemize}
-\tightlist
-\item
-  the ``Open Smart Register Platform'' (OpenSRP), that focuses on
-  providing a mobile-first platform, including a FHIR native app
-  designed to support the WHO Smart Guidelines
-\item
-  the OpenHIM Platform, a reference implementation of the Instant
-  OpenHIE framework, providing an easy way to set up, manage and operate
-  various HIE configurations
-\end{itemize}
+Today, many components of the OpenHIE specification are now available as
+a digital public goods, as listed in
+Table~\ref{tbl-digital-public-goods}. To further ease the development,
+configuration and deployment of health information exchanges, the
+concept of `Instant OpenHIE' has been championed to (i) allow
+implementers to engage with a preconfigured health information exchange
+solution and running tools (based on the architecture) and test their
+applicability and functionality with a real health context problem; and
+(ii) have a packaged reference version of the OpenHIE architecture that
+is comprised of a set of reference technologies and other appropriate
+tools that form the building blocks of the health information exchange
+that can be configured and extended to support particular use cases
+\citep{InstantOpenHIEv2}. Besides the core functional components of the
+OpenHIE architecture, the Instant OpenHIE toolkit allows packaging and
+integration of generic components such as Identity and Access Managment
+(IAM) and a reverse proxy gateway. In the following, we will evaluatie
+three of such configurations, with the aim to conceptualize and evaluate
+the proposed Data and Analytics Services domain of of the OpenHIE
+architecture.
 
 \begin{table}
 
@@ -882,27 +877,14 @@ component is the reference implementation of the Interoperability Layer
 (8.4.2 at the time of writing) provides all the core functions including
 central point of access for the services of the HIE; routing functions;
 central logging for auditing and debugging purposes; and
-orchestration/mediation mechanisms to co-ordinate requests. This
-reference implementation of the IOL has recently been extended as a
-reference implementation of the so-called `Instant OpenHIE' concept,
-that aims to address the primary needs of (i) allowing implementers to
-engage with a preconfigured health information exchange solution and
-running tools (based on the architecture) and test their applicability
-and functionality with a real health context problem; and (ii) having a
-packaged reference version of the OpenHIE architecture that is comprised
-of a set of reference technologies and other appropriate tools that form
-the building blocks of the health information exchange that can be
-configured and extended to support particular use cases
-\citep{digitalsquare2020instantopenhie}. The Instant HIE project allows
-OpenHIE components to be packages up, deployed, operated and scaled via
-a simple Command Line Interface (CLI, version 2 released in 2023
-\url{https://github.com/openhie/instant-v2}). The OpenHIM Platform
-(\url{https://jembi.gitbook.io/openhim-platform}) provides a set of
-bundled packages (called recipes) that can be deployed using the Instant
-OpenHIE deployment tool. In the following we will evaluate the recipe
-for ``a central data repository with a data warehouse'' that provides
-``A FHIR-based Shared Health record linked to a Master Patient Index
-(MPI) for linking and mathing patient demographics and a default
+orchestration/mediation mechanisms to co-ordinate requests. By
+extension, the OpenHIM Platform
+(\url{https://jembi.gitbook.io/openhim-platform}) is a reference
+implementation of a set of Instant OpenHIE configurations, refered to as
+`recipes' in the documentation. In the following we will evaluate the
+recipe for ``a central data repository with a data warehouse'' that
+provides ``A FHIR-based Shared Health record linked to a Master Patient
+Index (MPI) for linking and mathing patient demographics and a default
 reporting pipeline to transform and visualise FHIR data''
 (\url{https://jembi.gitbook.io/openhim-platform/recipes/central-data-repository-with-data-warehousing}).
 
@@ -915,10 +897,10 @@ reporting pipeline to transform and visualise FHIR data''
 }
 
 \caption{\label{fig-openhim-platform}Overview of the default data stack
-of the OpenHIM Platform. The default stack (top, darkblue) consists of
-Kafka, Clickhouse and Superset. An alternative solution based on the ELK
-stack is also supported (bottom, lightblue), consisting of
-Elasticsearch, Logstash and Kibana.}
+of the OpenHIM Platform. The default stack (top, red) consists of Kafka,
+Clickhouse and Superset. An alternative solution based on the ELK stack
+is also supported (bottom, orange), consisting of Elasticsearch,
+Logstash and Kibana.}
 
 \end{figure}%
 
@@ -929,21 +911,20 @@ Record (SHR, implemented with HAPI FHIR server) and the Client Registry
 FHIR data and patient demographic data, respectively. The default data
 stack is based on streaming ingestion using Kafka into a Clickhouse
 database. As part of the ingestion, incoming FHIR bundles that contain
-multiple FHIR resources are unbundled in separate topics. Subsequently,
-each FHIR resource topic is flatted using mappers Unbundling and
-flattening of FHIR resources is done in Kafka using FHIRPath. Superset
-is used as the tool for consuming the data to create dashboard
-visualizations.
+multiple FHIR resources are unbundled in separate topics using a generic
+Kafka utility component. Subsequently, each FHIR resource topic is
+flatted with Kafka mappers that use FHIRPath. Superset is used as the
+tool for consuming the data to create dashboard visualizations.
 
-The OpenHIM platform also support data analytics based on the ELK stack,
-where data is ingested in bulk using Logstash, stored in Elasticsearch
-and made available for consumption in Kibana. Also here, the incoming
-FHIR bundles are unbundled in Logstash into separate FHIR resources.
-However, given that Elasticsearch is a document-based search engine, the
-FHIR resources are stored as-is with no flattening. Exploring and
-analysing the data requires writing queries in Elasticsearch Query
-Language (ES\textbar QL), either through the query interface of
-Elasticsearch or using Kibana.
+The OpenHIM platform also support data and analytics based on the ELK
+stack, where data is ingested in bulk using Logstash, stored in
+Elasticsearch and made available for consumption in Kibana. Also here,
+the incoming FHIR bundles are unbundled in Logstash into separate FHIR
+resources. However, given that Elasticsearch is a document-based search
+engine, the FHIR resources are stored as-is with no flattening.
+Exploring and analysing the data requires writing queries in
+Elasticsearch Query Language (ES\textbar QL), either through the query
+interface of Elasticsearch or using Kibana.
 
 Evaluating these two data stacks, we see the following:
 
@@ -966,66 +947,147 @@ Evaluating these two data stacks, we see the following:
 
 \subsection{ONA Canopy}\label{ona-canopy}
 
+TO DO: add section describing ONA Canopy.
+
 \subsection{Momcare programme}\label{momcare-programme}
 
 MomCare was launched in Kenya
 \citep{huisman2022digital, sanctis2022maintaining} and Tanzania
 \citep{shija2021access, mrema2021application} in 2017 and 2019
-respectively, with the objective to create transparency on the journeys
-of pregnant mothers. The programme is built on three pillars: journey
-tracking, quality support and a mobile wallet. MomCare distinguishes two
-user groups: mothers are supported during their pregnancy through
-reminders and surveys, using SMS as the digital mode of engagement.
-Health workers are equipped with an Android-based application, in which
-visits, care activities and clinical observations are recorded.
-Reimbursements of the maternal clinic are based on the data captured
-with SMS and the app, thereby creating a conditional payment scheme,
-where providers are partially reimbursed up-front for a fixed bundle of
-activities, supplemented by bonus payments based on a predefined set of
-care activities.
+respectively, with the objective to improve health outcomes for maternal
+and antenatal care. MomCare distinguishes two user groups: mothers are
+supported during their pregnancy through reminders and surveys, using
+SMS as the digital mode of engagement. Health workers are equipped with
+an Android-based application, in which visits, care activities and
+clinical observations are recorded. Reimbursements of the maternal
+clinic are based on the data captured with SMS and the app, thereby
+creating a conditional payment scheme, where providers are partially
+reimbursed up-front for a fixed bundle of activities, supplemented by
+bonus payments based on a predefined set of care activities.
 
-In its original form, the MomCare programme uses predominantly closed
-digital platforms. In Kenya, M-TIBA is the primary digital platform, on
-top of which a relatively lightweight custom app has been built as the
+In its original form, the MomCare programme used closed digital
+platforms. In Kenya, M-TIBA is the primary digital platform, on top of
+which a relatively lightweight custom app has been built as the
 engagement layer for the health workers \citep{huisman2022digital}.
 M-TIBA provides data access through its data warehouse platform for the
 MomCare programme, however, this is not a standardized, general purpose
 API. In the case of Tanzania, a stand-alone custom app is used which
 does not provide an interface of any kind for interacting with the
-platform \citep{mrema2021application}. Given these constraints, to date
-the MomCare programme uses a custom-built data warehouse environment as
-its main data platform, on which data extractions, transformations and
-analysis are performed to generate the operational reports. Feedback
-reports for the health workers, in the form of operational dashboards,
-are made accessible through the app. Similar reports are provided to the
-back-office for the periodic reimbursement to the clinics.
+platform \citep{mrema2021application}. Given these constraints, the
+first iteration of the MomCare programme used a custom-built data
+warehouse environment as its main data platform, on which data
+extractions, transformations and analysis are performed to generate the
+operational reports. Feedback reports for the health workers, in the
+form of operational dashboards, are made accessible through the app.
+Similar reports are provided to the back-office for the periodic
+reimbursement to the clinics.
 
-In the periode 2022-2023, a new iteration of MomCare \ldots One of the
-practical objectives of the DataCare project was to assess the
-complexity and effort required to implement the data transformation
-scripts, and reproduce the existing analytic reports. The data was
-transformed into 10 FHIR v4 resources as listed in table 1 with the
-number of records per resource type. The conceptual data model of the
-existing MomCare app could readily be transformed into the FHIR standard
-using SQL and validated with a Python library \citep{islam2023fhir}.
+Clearly, a more open and scaleable platform was required if MomCare was
+to be implemented in more regions. This need led to a redesign of the
+underlying technical infrastructure of the MomCare project. The
+objectives of this work were in fact to demonstrate a solution design
+that could support the first three types of data sharing listed in
+Table~\ref{tbl-types-data-sharing}. First, to investigate the viability
+of using FHIR for bulk data sharing, MomCare Tanzania was used a testbed
+to assess the complexity and effort required to implement the facade
+pattern to integrate the legacy system into the FHIR data standard.
+Using the longitudinal dataset from approximately 28 thousand patient
+records, FHIR transformations script were developed and deployed using
+the mediator function of the IOL. The data was transformed into 10 FHIR
+v4 resources and the conceptual data model of the existing MomCare app
+could readily be transformed into the FHIR standard using SQL and
+validated with a Python library \citep{islam2023fhir}. The largest
+challenge during the transformation process pertained to the absence of
+unique business identifiers for patients and healthcare organizations.
+For patients, either the mobile phone number or the healthcare insurance
+number was taken, depending on availability. A combination of name,
+address and latitude/longitude coordinates were used to uniquely
+identify organizations and locations, as Tanzania does not have a system
+in place for this purpose.
 
-The largest challenge during the transformation process pertained to the
-absence of unique business identifiers for patients and healthcare
-organizations. For patients, either the mobile phone number or the
-healthcare insurance number was taken, depending on availability. A
-combination of name, address and latitude/longitude coordinates were
-used to uniquely identify organizations and locations, as Tanzania does
-not have a system in place for this purpose.
-
-The transformed and validated data is uploaded into the FHIR server on a
-daily basis using an automated cloud function. Analysis of bulk data was
-done by directly reading the standard newline delimited JSON into the
-Python pandas data analysis library. Cross checking the output with
-queries on the original data confirmed that the whole data pipeline
-produced consistent results. For example, the report of the antenatal
-coverage metric (number of pregnancies with four or more visits) could
-be reproduced per patient journey and aggregated (per year, per
+The second objective was to reproduce existing analytic reports, using
+the bulk FHIR data format as input. Here, the focus was to standardize
+the logic required for producing metrics and reports. The transformed
+and validated data is uploaded into the FHIR server on a daily basis
+using an automated cloud function. Analysis of bulk data was done by
+directly reading the standard newline delimited JSON into the Python
+pandas data analysis library. Cross checking the output with queries on
+the original data confirmed that the whole data pipeline produced
+consistent results. For example, the report of the antenatal coverage
+metric (number of pregnancies with four or more visits) could be
+reproduced per patient journey and aggregated (per year, per
 organization etc.) as required for the MomCare reports.
+
+TO DO: explain logic of patient-timeline table. Write standard
+transformation to go from FHIR resources to this standard table. On top
+of that the actual metrics and reporting. Explain serverless: we wanted
+to get rid of resource-heavy data visualization tools. This led to the
+idea of serverless: using duckdb-wasm and pipelines of cloud functions.
+
+The third objective was to run a technical feasibility test for
+federated analytics. Using the MPC platform of Roseman Labs, we managed
+to do aggregations in the blind \ldots{} TO DO: explain that we managed
+to reproduce the reports we generated in the clear, but then in the
+blind. Note, however, that in the remainder we will focus on first two
+types of data sharing.
+
+Based on these experiments, we arrived at the following design for the
+data \& analytics services
+
+\begin{itemize}
+\tightlist
+\item
+  Use `serverless' file-based storage: bulk copy of data as-is in
+  parquet
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Tension: how to manage change data capture
+  \item
+    Tension: how to manage access rights
+  \end{itemize}
+\item
+  Use SQL-on-FHIR-v2 to create tabular views.
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Example: patient timeline
+  \item
+    TO DO: rewrite patient timeline queries with SQL-on-FHIR-v2 and run
+    it with Pathling
+  \end{itemize}
+\item
+  Use semantic modeling layer to define metrics
+
+  \begin{itemize}
+  \tightlist
+  \item
+    There are many options: dbt, cube.dev
+  \item
+    Fulfills same function as ADX/mADX IHE profile in OpenHIE
+    specification
+  \item
+    Tension: going from patient-timeline to reported metrics still isn't
+    standardized. This is where Ibis/Substrait comes in. Substrait as IR
+    for cross-language serialization for relational algebra. Can be
+    executed on different backends. Write once, run on different
+    engines.
+  \end{itemize}
+\item
+  Distribute and publish reports on resource-constrained devices
+
+  \begin{itemize}
+  \tightlist
+  \item
+    duckdb
+  \item
+    sveltekit
+  \end{itemize}
+\end{itemize}
+
+TO DO: Add diagram
 
 \section{Discussion}\label{discussion}
 
@@ -1036,7 +1098,6 @@ We specifically address the notion of openness of HDPs in LMICs in terms
 of the design-related questions put forward by de Reuver at al.11:
 
 \begin{itemize}
-\tightlist
 \item
   Object of openness: what data-related resources should data platforms
   make available when opening up (e.g.~data, data products, datadriven
@@ -1052,6 +1113,20 @@ of the design-related questions put forward by de Reuver at al.11:
   Risk of openness: What are the novel (negative) implications of
   opening up data platforms? How can reflexivity in design help
   providers to resolve the negative implications of openness?
+\item
+  Answers/insights to above:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Openness of standardized view on FHIR data and cross-language
+    serialization of relational algebra makes it possible to fully
+    standardize the workflow from start to finish
+  \item
+    Platform-to-platform: MPC
+  \item
+    Risk of openness: difficult to answer \ldots{}
+  \end{itemize}
 \end{itemize}
 
 \subsection{Comparison with HMIS
